@@ -40,6 +40,7 @@ extends \link[R.oo]{Interface}\cr
   \bold{Methods:}\cr
 \tabular{rll}{
  \tab \code{appendFullNameTranslatorByTabularTextFile} \tab  -\cr
+ \tab \code{appendFullNameTranslatorByTabularTextFileSet} \tab  -\cr
  \tab \code{clearFullNameTranslator} \tab  -\cr
  \tab \code{\link[R.filesets:getFullName.FullNameInterface]{getFullName}} \tab Gets the full name.\cr
  \tab \code{\link[R.filesets:getName.FullNameInterface]{getName}} \tab Gets the name.\cr
